Modify lab9-pages.yml to include build step
Updated workflow to automatically generate the static 'out/' folder during build.

--- a/.github/workflows/lab9-pages.yml
+++ b/.github/workflows/lab9-pages.yml
@@ -21,8 +21,7 @@ jobs:
           node-version: 20
 
       - run: npm ci
-      - run: npm run build
-      - run: npm run export
+      - run: npm run build   # ✅ This automatically generates the static 'out/' folder
 
       - uses: actions/upload-pages-artifact@v3
         with:
